--- a/.gitattributes
+++ b/.gitattributes
@@ -2,8 +2,17 @@
 *.resS filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 
-
-Project\/(?!Assets\/Scripts\/$).* linguist-vendored
 Build/* linguist-vendored
 TemplateData/* linguist-vendored
 res/* linguist-vendored
+Project/Library/**/* linguist-vendored
+
+*.c linguist-vendored
+*.cpp linguist-vendored
+*.html linguist-vendored
+*.css linguist-vendored
+*.js linguist-vendored
+*.aspx linguist-vendored
+*.shader linguist-vendored
+*.cginc linguist-vendored
+*.mk linguist-vendored
